--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,12 +14,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+        
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8 nose spec nose-exit specnose coverage
+          pip install flake8 nose spec coverage
 
       - name: Lint with flake8
         run: |
