--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8 nose nose-spec coverage
+          pip install flake8 nose coverage
 
       - name: Lint with flake8
         run: |
